[package]
name = "t"
version = "2.0.0"
authors = ["Denis Evsyukov <denis@evsyukov.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2"
rust-crypto = "0.2"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
panic = 'abort'